tests/test_files_pa3/new/SemanticErrors/LocalVarsNotInitB4Use2.ic
class A
{
	void a()
	{		
		int b;
		int c = 5;
		b = c + b;
	}

	static void main(string[] args) { }
}